# IWFSynth

./: .gitignore  README.md
cpp_project/: BuildExec  CleanAll  auto_complete
cpp_project/src/: CMakeLists.txt
cpp_project/src/Executables/CLISynth/: CMakeLists.txt  main.cpp
cpp_project/src/Modules/Audio/: AudioSystem.cpp  AudioSystem.hpp  CMakeLists.txt  PaCallBack.cpp  PaCallBack.hpp
cpp_project/src/Modules/Skeleton/: CMakeLists.txt  Carrier.cpp  Carrier.hpp  Keyboard.hpp  Note.hpp  Operator.hpp
python_prototyping/: main.py
python_prototyping/PMSynth/: __init__.py  signals.py
